# sklearn-crfsuite

./: .gitignore  CHANGES.rst  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py
sklearn_crfsuite/: _fileresource.py  compat.py  estimator.py  metrics.py  scorers.py  trainer.py
tests/: conftest.py  test_crf.py  test_metrics.py
