[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sklearn-crfsuite"
version = "0.4.0"
description = "CRFSuite (python-crfsuite) wrapper which provides interface similar to scikit-learn"
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
keywords = ["crf", "crfsuite", "pycrfsuite", "python-crfsuite", "sklearn"]
authors = [
    {name = "Mikhail Korobov", email = "kmike84@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "python-crfsuite >= 0.9.7",
    "scikit-learn ~= 0.24.0",
    "six",
    "tabulate",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest ~= 6.2.4"
]

[project.urls]
homepage = "https://github.com/TeamHG-Memex/sklearn-crfsuite"
changelog = "https://github.com/TeamHG-Memex/sklearn-crfsuite/blob/master/CHANGES.rst"
