[bdist_wheel]
universal=1

[metadata]
name = sklearn-crfsuite
version = 0.4.1
author = Mikhail Korobov
author_email = kmike84@gmail.com
description = CRFSuite (python-crfsuite) wrapper which provides interface similar to scikit-learn
keywords = crf, crfsuite, pycrfsuite, python-crfsuite, sklearn
license = MIT
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/TeamHG-Memex/sklearn-crfsuite
project_urls =
    changelog = https://github.com/TeamHG-Memex/sklearn-crfsuite/blob/master/CHANGES.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    python-crfsuite ~= 0.9.7
    scikit-learn >= 0.20.0,<1.0
    tabulate
    tqdm
packages =
    sklearn_crfsuite
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    pytest>=6.0
    pytest-cov
